# 2026SouthwardHarmony

./: event.c  msgqueue.c  muxtask.c  mytask.c
arm_mps2_an386/liteos_m/board/: BUILD.gn  main.c
arm_mps2_an386/liteos_m/board/app/: hello.c  helloShell.c
arm_mps2_an386/liteos_m/board/mem_demo/: mem_demo.h
arm_mps2_an386/liteos_m/board/mydemo/: BUILD.gn  event.c  memorytest.c  msgqueue.c  muxtask.c  mytask.c  text_demo.c
homework1/: hello.c
homework2/: hello_shell.c
homework3/: mytask.c
homework4/: event.c  muxtask.c
homework5/: semaphore.c
homework6/: hwitest.c  mem_demo.c  mem_demo.h
homework7/: hwitest.c
homework8/: BUILD.gn  dsoftbus_send_data.c
mem_demo/: BUILD.gn
大作业/: BUILD.gn  text_demo.c
